@@ -1,5 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+export(addLabelReferenceLines)
 export(convertToDateTime)
 export(createSubjectProfileReport)
 export(getLabelVar)
@@ -25,6 +26,8 @@ importFrom(ggplot2,ggplot_build)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,theme_bw)
 importFrom(glpgStyle,glpgPaletteCharts)
+importFrom(grid,gpar)
+importFrom(grid,textGrob)
 importFrom(haven,read_sas)
 importFrom(knitr,knit)
 importFrom(knitr,knit_expand)
