@@ -7,6 +7,7 @@
     o add grouping variable
     o subjectProfileTheme
     o loadDataADAM: include support for date/time format
+    o createSubjectProfileReport/subjectProfileCombine: add refLines parameter
 0.0.2
     o remove glpgUtility from the dependencies
 0.0.1
